added functions and event listeners

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -46,7 +46,7 @@
           </div>
           <div>
             <button type="button" class="btn btn-secondary m-3" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary m-3">Save</button>
+            <button type="button" class="saveBtn btn-save m-3">Save</button>
           </div>
         </div>
       </div>
