--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,13 +35,13 @@
           </div>
           <div class="row g-3">
             <div class="col">
-              <input type="text" class="task m-3" placeholder="Task" aria-label="Task">
+              <input type="text" id="task" class="task m-3" placeholder="Task" aria-label="Task">
             </div>
             <div class="col">
-              <input type="text" class="dueDate m-3" placeholder="Due Date" aria-label="Due Date">
+              <input type="text" id="dueDate" class="dueDate m-3" placeholder="Due Date" aria-label="Due Date">
             </div>
             <div class="col">
-              <textarea type="text" class="description" placeholder="Description" aria-label="Description"></textarea>
+              <textarea type="text" id="description" class="description" placeholder="Description" aria-label="Description"></textarea>
             </div>
           </div>
           <div>
